reforming of user, database models and email verify
