# backend/src/controllers/auth.controller.ts
@@ -1,15 +1,14 @@
-import { Body, Controller, Get, Path, Post, Query, Res, Route, Security, Tags, TsoaResponse } from "tsoa"
-import bcrypt from 'bcrypt'
-import jwt from 'jsonwebtoken'
+import { Body, Controller, Get, Post, Route, Security, Tags } from "tsoa"
 import dotenv from 'dotenv'
+import bcrypt from 'bcrypt'
 
 import { IRegisterPayload, ILoginPayload, IEmailVerifyPayload } from "../interfaces/user.interface";
-import { User, Broker } from "../database/models/user.model";
+import { User } from "../database/models/user.model";
 import TokenService from "../services/token.service";
 import EmailService from "../services/email.service";
 import { HttpError } from "../errors/errors";
-import { IJwtPayload } from "../interfaces/auth.interface";
 import StatusCode from "status-code-enum";
+import UserService from "../services/user.service";
 
 dotenv.config()
 
@@ -20,46 +19,26 @@ export class AuthenticationController extends Controller {
     public async register(
         @Body() requestBody : IRegisterPayload
     ): Promise<void> {
-        const {userType, firstName, lastName, email, password, brokerPayload} = requestBody
+        const { firstName, lastName, email, password} = requestBody
 
-        const existingUser = await Promise.all([
-            User.findOne({ where: { email } }), 
-            Broker.findOne({ where: { email } })
-          ]);
+        const existingUser = await User.findOne({where: {email}})
 
-        if(!existingUser.every(value => value === null)) {
+        if(existingUser) {
             throw new HttpError(StatusCode.ClientErrorConflict, 'User with this email already exists.')
         }
-
-        const BCRYPT_SALT_ROUNDS = Number(process.env.BCRYPT_SALT_ROUNDS)
-        const passwordHashed = await bcrypt.hash(password, BCRYPT_SALT_ROUNDS)
-
-        const newUser = (userType == 'user') ? (
-            await User.create({
-                firstName,
-                lastName,
-                email,
-                passwordHashed
-            })
-        ) : (
-            await Broker.create({
-                firstName,
-                lastName,
-                email,
-                passwordHashed,
-                countryOfOrigin: brokerPayload?.countryOfOrigin ?? '',
-                agencyName: brokerPayload?.agencyName ?? '',
-                phoneNumber: brokerPayload?.phoneNumber ?? ''
-            })
-        )
+        
+        const userService = new UserService()
+        const newUser = await userService.createUser(firstName, lastName, email, password)
 
         await newUser.save()
 
-        const token = await TokenService.generateToken(newUser, '1h')
-        await EmailService.sendVerifyEmail(newUser.email, token)
+        const tokenService = new TokenService()
+        const token = await tokenService.generateToken(newUser, '30m')
+
+        const emailService = new EmailService()
+        await emailService.sendEmailVerification(newUser.email, token)
 
         this.setStatus(StatusCode.SuccessCreated)
-        return
     }
 
     @Post('login')
@@ -68,41 +47,31 @@ export class AuthenticationController extends Controller {
     ): Promise<void> {
         const {email, password, rememberMe} = requestBody
 
-        const existingUser = await Promise.all([
-            User.findOne({ where: { email } }), 
-            Broker.findOne({ where: { email } })
-          ]);
+        const existingUser = await User.findOne({where: {email: email}})
 
-        if(existingUser.every(value => value === null)) {
+        if(!existingUser) {
             throw new HttpError(StatusCode.ClientErrorUnauthorized, 'Incorrect email or password.')
         }
 
-        const user = existingUser.find(obj => obj !== null)
-
-        if(!user) {
-            throw new Error()
-        } 
-
-        const isPasswordValid = await bcrypt.compare(password, user.passwordHashed)
+        const isPasswordValid = await bcrypt.compare(password, existingUser.passwordHashed)
         if(!isPasswordValid) {
             throw new HttpError(StatusCode.ClientErrorUnauthorized, 'Incorrect email or password.')
         }
 
-        if(!user.verified) {
+        if(!existingUser.verified) {
             throw new HttpError(StatusCode.ClientErrorNotAcceptable, 'Email is not verified.')
         }
 
-        const duration = rememberMe ? '2d' : '1h';
-        const token = await TokenService.generateToken(user, duration);
+        const tokenService = new TokenService()
+        const token = await tokenService.generateToken(existingUser, rememberMe ? '2d' : '1h')
         
         if (rememberMe) {
-          this.setHeader('Set-Cookie', `jwt=${token}; HttpOnly; Max-Age=${1000 * 60 * 60 * 24 * 2}; Path=/`);
+          this.setHeader('Set-Cookie', `jwt=${token}; HttpOnly; Max-Age=${1000 * 60 * 60 * 24 * 2}; Path=/`)
         } else {
-          this.setHeader('Set-Cookie', `jwt=${token}; HttpOnly; Path=/`);
+          this.setHeader('Set-Cookie', `jwt=${token}; HttpOnly; Path=/`)
         }
         
-        this.setStatus(StatusCode.SuccessNoContent);
-        return
+        this.setStatus(StatusCode.SuccessNoContent)
     }
 
     @Post('logout')
@@ -122,36 +91,26 @@ export class AuthenticationController extends Controller {
             throw new HttpError(StatusCode.ClientErrorNotFound, 'Token not found')
         }
 
-        const AUTHENTICATION_SECRET_KEY = String(process.env.AUTHENTICATION_SECRET_KEY)
-        const decoded = jwt.verify(token, AUTHENTICATION_SECRET_KEY) as IJwtPayload
+        const tokenService = new TokenService()
+        const decoded = await tokenService.decodeToken(token)
 
-        const existingUser = await Promise.all([
-            User.findByPk(decoded.id), 
-            Broker.findByPk(decoded.id)
-          ]);
+        const existingUser = await User.findByPk(decoded.id)
 
         if(!existingUser) {
             throw new HttpError(StatusCode.ClientErrorNotFound, 'User not found')
         }
 
-        const user = existingUser.find(obj => obj !== null)
-
-        if(!user) {
-            throw new Error()
-        }
-
-        if(user.verified) {
+        if(existingUser.verified) {
             throw new HttpError(StatusCode.RedirectNotModified, 'User is already verified')
         }
 
-        user.verified = true
-        await user.save()
+        existingUser.verified = true
+        await existingUser.save()
 
         this.setStatus(StatusCode.SuccessNoContent)
     }
 
     @Get('profile')
     @Security('jwt')
-    public async profile(): Promise<void> {
-    }
+    public async profile(): Promise<void> {}
 }
