# backend/src/database/models/user.model.ts
@@ -1,14 +1,12 @@
 import { DataTypes, Model, InferAttributes, InferCreationAttributes, CreationOptional, HasManyGetAssociationsMixin, NonAttribute } from "@sequelize/core"
-import { Attribute, PrimaryKey, AutoIncrement, NotNull, Unique, Default, CreatedAt, UpdatedAt, HasMany, Table } from "@sequelize/core/decorators-legacy"
+import { Attribute, PrimaryKey, AutoIncrement, NotNull, Unique, Default, CreatedAt, UpdatedAt, HasMany } from "@sequelize/core/decorators-legacy"
 import {IsEmail, IsNumeric } from "@sequelize/validator.js"
 
 import Favourite from "./favourite.model"
 import Listing from "./listing.model"
-import { IBroker, IUser } from "../../interfaces/user.interface"
 
-@Table.Abstract
-export class AbstractUser<M extends AbstractUser<M>> 
-extends Model<InferAttributes<M>, InferCreationAttributes<M>> {
+export class User 
+extends Model<InferAttributes<User>, InferCreationAttributes<User>> {
     @Attribute(DataTypes.INTEGER)
     @PrimaryKey
     @AutoIncrement
@@ -32,30 +30,18 @@ extends Model<InferAttributes<M>, InferCreationAttributes<M>> {
     @NotNull
     declare passwordHashed: string
 
-    @Attribute(DataTypes.STRING)
-    @Default('')
-    @NotNull
-    declare profileImage: CreationOptional<string>
-
     @Attribute(DataTypes.BOOLEAN)
     @NotNull
     @Default(false)
     declare verified: CreationOptional<boolean>
 
-    @Attribute(DataTypes.DATE)
-    @CreatedAt
-    @NotNull
-    @Default(DataTypes.NOW)
-    declare createdAt: CreationOptional<Date>
+    @Attribute(DataTypes.STRING)
+    declare countryOfOrigin?: CreationOptional<string>
+    
+    @Attribute(DataTypes.STRING)
+    @IsNumeric
+    declare phoneNumber?: CreationOptional<string>
 
-    @Attribute(DataTypes.DATE)
-    @UpdatedAt
-    @NotNull
-    @Default(DataTypes.NOW)
-    declare updatedAt: CreationOptional<Date>
-}
-
-export class User extends AbstractUser<User> implements IUser {
     @HasMany(() => Favourite, {
         foreignKey: {
             name: 'userId',
@@ -65,25 +51,10 @@ export class User extends AbstractUser<User> implements IUser {
     declare favourites?: NonAttribute<Favourite[]>
 
     declare getFavourites: HasManyGetAssociationsMixin<Favourite>
-}
-
-export class Broker extends AbstractUser<Broker> implements IBroker {
-    @Attribute(DataTypes.STRING)
-    @NotNull
-    declare countryOfOrigin: string
-
-    @Attribute(DataTypes.STRING)
-    @NotNull
-    declare agencyName: string
-
-    @Attribute(DataTypes.STRING)
-    @NotNull
-    @IsNumeric
-    declare phoneNumber: string
 
     @HasMany(() => Listing, {
         foreignKey: {
-            name: 'brokerId',
+            name: 'userId',
             onDelete: 'CASCADE'
         }
     })
